# download-async

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  search-index.js  settings.html  source-files.js  upload-docs.sh
.github/workflows/: release-minor.yml
download_async/: all.html  fn.download.html  index.html  sidebar-items.js  struct.Body.html  struct.Downloader.html  struct.HeaderMap.html  struct.Method.html  struct.Request.html  struct.Response.html  struct.SocketAddrs.html  struct.StatusCode.html  struct.StatusError.html  struct.Uri.html  struct.Version.html  trait.Progress.html
download_async/builder/: struct.Downloader.html
download_async/dns/: struct.SocketAddrs.html
download_async/download/: fn.download.html  index.html  sidebar-items.js
download_async/error/: index.html  sidebar-items.js  struct.StatusError.html
download_async/header/: constant.ACCEPT.html  constant.ACCEPT_CHARSET.html  constant.ACCEPT_ENCODING.html  constant.ACCEPT_LANGUAGE.html  constant.ACCEPT_RANGES.html  constant.ACCESS_CONTROL_ALLOW_CREDENTIALS.html  constant.ACCESS_CONTROL_ALLOW_HEADERS.html  constant.ACCESS_CONTROL_ALLOW_METHODS.html  constant.ACCESS_CONTROL_ALLOW_ORIGIN.html  constant.ACCESS_CONTROL_EXPOSE_HEADERS.html  constant.ACCESS_CONTROL_MAX_AGE.html  constant.ACCESS_CONTROL_REQUEST_HEADERS.html  constant.ACCESS_CONTROL_REQUEST_METHOD.html  constant.AGE.html  constant.ALLOW.html  constant.ALT_SVC.html  constant.AUTHORIZATION.html  constant.CACHE_CONTROL.html  constant.CONNECTION.html  constant.CONTENT_DISPOSITION.html  constant.CONTENT_ENCODING.html  constant.CONTENT_LANGUAGE.html  constant.CONTENT_LENGTH.html  constant.CONTENT_LOCATION.html  constant.CONTENT_RANGE.html  constant.CONTENT_SECURITY_POLICY.html  constant.CONTENT_SECURITY_POLICY_REPORT_ONLY.html  constant.CONTENT_TYPE.html  constant.COOKIE.html  constant.DATE.html  constant.DNT.html  constant.ETAG.html  constant.EXPECT.html  constant.EXPIRES.html  constant.FORWARDED.html  constant.FROM.html  constant.HOST.html  constant.IF_MATCH.html  constant.IF_MODIFIED_SINCE.html  constant.IF_NONE_MATCH.html  (+62 more)
download_async/progress/: index.html  sidebar-items.js  trait.Progress.html
examples/: download.rs  progress.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/iter/traits/iterator/: trait.Iterator.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/download_async/header/: trait.AsHeaderName.js
implementors/std/error/: trait.Error.js
implementors/std/net/addr/: trait.ToSocketAddrs.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: body.rs  builder.rs  decoder.rs  dns.rs  download.rs  error.rs  lib.rs  progress.rs
src/download_async/: builder.rs.html  dns.rs.html  download.rs.html  error.rs.html  lib.rs.html  progress.rs.html
