[package]
name = "download-async"
version = "0.1.0"
authors = ["SonnyX <randy@vonderweide.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
async-trait = "0.1"
native-tls = "0.2.7"
tower = "0.3"
hyper = { version="0.14", features = ["client", "tcp", "http1", "http2"] }
hyper-tls = "0.5"
tokio = { version = "1.0", features = ["rt"] }