[package]
name = "download-async"
description = "A fast and convenient wrapper around hyper with https support."
version = "0.10.3"
license = "MIT"
authors = ["SonnyX <randy@vonderweide.nl>"]
repository = "https://github.com/SonnyX/download-async/"
keywords = ["download", "async", "http", "https"]
categories = ["network-programming", "web-programming::http-client", "web-programming::https-client"]
edition = "2018"

include = [
  "Cargo.toml",
  "src/**",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
http = "0.2"
async-trait = "0.1"
native-tls = "0.2.7"
tower = "0.4"
hyper = { version="0.14", features = ["client", "tcp", "http1", "http2"] }
hyper-tls = "0.5"
tokio = { version = "1.6", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1.6", features = ["rt", "macros", "rt-multi-thread"] }
futures = "0.3"

[[example]]
name = "progress"
path = "examples/progress.rs"

[[example]]
name = "download"
path = "examples/download.rs"
