[package]
name = "download-async"
description = "A fast and convenient wrapper around hyper with https support."
version = "0.10.9"
license = "MIT"
authors = ["SonnyX <randy@vonderweide.nl>"]
repository = "https://github.com/SonnyX/download-async/"
keywords = ["download", "async", "http", "https"]
categories = ["network-programming", "web-programming::http-client", "web-programming::https-client"]
edition = "2018"

include = [
  "Cargo.toml",
  "src/**",
]


[dependencies]
log = "0.4"
http = "0.2"
async-trait = "0.1"
native-tls = "0.2.11"
tower = "0.4"
hyper = { version="0.14", features = ["client", "tcp", "http1", "http2", "stream"] }
hyper-tls = "0.5"
tokio = { version = "1.25", features = ["rt"] }

# needed for decoder.rs
pin-project-lite = "0.2.9"
http-body = "0.4.5"
bytes = "1.3.0"
futures-core = { version = "0.3.25", default-features = false }
futures-util = { version = "0.3.24", default-features = false }
async-compression = { version = "0.3.15", default-features = false, features = ["tokio"], optional = true }
tokio-util = { version = "0.7.5", default-features = false, features = ["codec", "io"], optional = true }

[dev-dependencies]
tokio = { version = "1.25", features = ["rt", "macros", "rt-multi-thread"] }
futures = "0.3"

[features]
default = ["gzip", "brotli", "deflate"]
gzip = ["async-compression", "async-compression/gzip", "tokio-util"]
brotli = ["async-compression", "async-compression/brotli", "tokio-util"]
deflate = ["async-compression", "async-compression/zlib", "tokio-util"]


[[example]]
name = "progress"
path = "examples/progress.rs"

[[example]]
name = "download"
path = "examples/download.rs"
